--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
-    if: ${{ secrets.SPONSORKIT_GITHUB_TOKEN }}
+    if: secrets.SPONSORKIT_GITHUB_TOKEN
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
