--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+        with:
+          cache: npm
+      - run: npm ci
       - run: npx sponsorkit
         env:
           SPONSORKIT_GITHUB_TOKEN: ${{ secrets.SPONSORKIT_GITHUB_TOKEN }}
