--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -32,6 +32,6 @@ jobs:
         run: |
           git config --local user.email "${{ github.actor }}@users.noreply.github.com"
           git config --local user.name "${{ github.actor }}"
-          git add sponsors.svg
+          git add .
           git commit -m "chore: [skip ci] update sponsors"
           git push
