--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -22,16 +22,10 @@ jobs:
       - run: npx sponsorkit
         env:
           SPONSORKIT_GITHUB_TOKEN: ${{ secrets.SPONSORKIT_GITHUB_TOKEN }}
-      - name: Check if sponsors.svg file has changed
-        id: check
-        run: |
-          git diff --exit-code
-          echo "changed=$?" >> $GITHUB_OUTPUT
       - name: Commit and push
-        if: ${{ steps.check.outputs.changed }}
-        run: |
-          git config --local user.email "${{ github.actor }}@users.noreply.github.com"
-          git config --local user.name "${{ github.actor }}"
-          git add .
-          git commit -m "chore: [skip ci] update sponsors"
-          git push
+        uses: EndBug/add-and-commit@v7
+        with:
+          message: "Update sponsors"
+          add: "sponsors.svg"
+          author_name: "Odroe Bot"
+          author_email: "hello@odroe.com"
