--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -3,12 +3,8 @@ on:
   schedule:
     - cron: "0 0 * * *"
   push:
-    paths:
-      - package.json
-      - package-lock.json
-      - sponsors.svg
-      - .github/workflows/sponsors.yml
-      - sponsorkit.config.*
+    branches:
+      - main
   workflow_dispatch:
 jobs:
   generate:
