--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           cache: npm
       - run: npm ci
-      - run: npx sponsorkit
+      - run: npx sponsorkit -f
         env:
           SPONSORKIT_GITHUB_TOKEN: ${{ secrets.SPONSORKIT_GITHUB_TOKEN }}
       - name: Commit and push
