--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -26,7 +26,7 @@ jobs:
         id: check
         run: echo "changed=$(git diff --name-only | grep -c sponsors.svg)" >> $GITHUB_OUTPUT
       - name: Commit and push
-        if: ${{ steps.check.outputs.changed }}
+        if: ${{ steps.check.outputs.changed == '1' }}
         run: |
           git config --local user.email "${{ github.actor }}@users.noreply.github.com"
           git config --local user.name "${{ github.actor }}"
